# Project_58

./: .gitignore  Cargo.toml  README.md
apigateway/: Cargo.toml  Readme.txt
apigateway/src/: main.rs
assets/: readme.txt
auth_service/: Cargo.toml  Readme.txt
auth_service/src/: main.rs
data_service/: app.py  readme.txt  request.py
data_service/dataservice/: __init__.py  models.py  service.py
db_lib/: Cargo.toml
db_lib/src/: error.rs  lib.rs  pool.rs  users_db.rs
frontend/: Readme.txt  login.html
