[package]
name = "auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
db_lib = { path = "../db_lib" }
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
jsonwebtoken = "9"   # para firmar/verificar JWT
chrono = { version = "0.4", features = ["serde"] }       # para expiración
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.12"
regex = "1"
actix-cors = "0.6"